Update Tic-Tac-Toe game with improved UX and color scheme
- Enhanced color palette with better contrast and readability
- Updated modal button colors (orange PLAY AGAIN, red FRESH START)
- Added hover effects with border color changes
- Improved body background color for better UX
- Removed status messages for cleaner interface
- Fixed win detection logic
- Updated score board and game board styling
- Enhanced text shadows and visual effects

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div class="stars" id="stars"></div>
     <div class="slide-message" id="slideMessage"></div>
     
-    <div class="phone-container">
-        <div class="phone-notch">
+    <div class="phone-container pixel-corners">
+        <div class="phone-notch pixel-corners">
             <div class="phone-speaker"></div>
         </div>
-        <div class="phone-screen">
+        <div class="phone-screen pixel-corners">
             <!-- Name Entry Screen -->
             <div class="name-entry-screen" id="nameEntryScreen">
-                <!-- <div class="welcome-title">TIC-TAC-TOE</div> -->
+                <div class="welcome-title">TIC<br>TAC<br>TOE</div>
                 <div class="form-container">
                     <div>
                         <label class="input-label">PLAYER NAME</label>
@@ -63,16 +63,16 @@
                 <div class="game-status" id="status"></div>
                 <button class="reset-btn" id="resetBtn">RESET GAME</button>
                 <button class="back-btn" id="backBtn">BACK</button>
-
-                <!-- Win Modal -->
-                <div class="win-modal" id="winModal">
-                    <div class="win-modal-content">
-                        <div class="win-message" id="winMessage"></div>
-                        <button class="play-again-btn" id="playAgainBtn">PLAY AGAIN</button>
-                        <button class="play-again-btn new-game-btn" id="newGameBtn">FRESH START</button>
-                    </div>
-                </div>
             </div>
+        </div>
+    </div>
+
+    <!-- Win Modal -->
+    <div class="win-modal" id="winModal">
+        <div class="win-modal-content">
+            <div class="win-message" id="winMessage"></div>
+            <button class="play-again-btn" id="playAgainBtn">PLAY AGAIN</button>
+            <button class="play-again-btn new-game-btn" id="newGameBtn">FRESH START</button>
         </div>
     </div>
 
