feat: Add environment configuration system
- Create env-config.js for easy API URL management
- Add config.env.example template file
- Update config.js to read from environment variables
- Add console logging for API URL debugging
- Simplify configuration management for different environments

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -76,6 +76,7 @@
         </div>
     </div>
 
+    <script src="js/env-config.js"></script>
     <script src="js/config.js"></script>
     <script src="js/game.js"></script>
 </body>
