--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8-Bit Pixel Tic Tac Toe</title>
+    <title>Tic Tac Toe by pppwtk</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
