Add pixel grid background with sky gradient and mobile optimizations
- Added 32x32 pixel grid background (16x16 on mobile) with sky gradient
- Changed gradient from light at top to dark at bottom
- Added mobile-responsive slide message styling
- Changed 'FRESH START' to 'BACK TO MAIN' across all files
- Created dynamic stars on mobile within phone-screen
- Updated body background with pixel art gradient
- Added keyboard detection for mobile margin adjustments
- Improved z-index layering for stars and UI elements

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -72,7 +72,7 @@
         <div class="win-modal-content">
             <div class="win-message" id="winMessage"></div>
             <button class="play-again-btn" id="playAgainBtn">PLAY AGAIN</button>
-            <button class="play-again-btn new-game-btn" id="newGameBtn">FRESH START</button>
+            <button class="play-again-btn new-game-btn" id="newGameBtn">BACK TO MAIN</button>
         </div>
     </div>
 
