--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div id="pixel-grid"></div>
     <div class="stars" id="stars"></div>
     <div class="slide-message" id="slideMessage"></div>
     
@@ -72,7 +73,7 @@
         <div class="win-modal-content">
             <div class="win-message" id="winMessage"></div>
             <button class="play-again-btn" id="playAgainBtn">PLAY AGAIN</button>
-            <button class="play-again-btn new-game-btn" id="newGameBtn">FRESH START</button>
+            <button class="play-again-btn new-game-btn" id="newGameBtn">BACK TO MAIN</button>
         </div>
     </div>
 
