Add favicon and logo: Update HTML files with favicon support and add logo to README

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe by pppwtk</title>
+    <title>tictactoe-qlearning</title>
+    <link rel="icon" type="image/png" href="frontend/public/img/logo_png.png">
+    <link rel="shortcut icon" type="image/png" href="frontend/public/img/logo_png.png">
+    <link rel="apple-touch-icon" href="frontend/public/img/logo_png.png">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
