--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe by pppwtk</title>
+    <link rel="icon" type="image/png" href="img/logo_png.png">
+    <link rel="shortcut icon" type="image/png" href="img/logo_png.png">
+    <link rel="apple-touch-icon" href="img/logo_png.png">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
