--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo_png.png" />
+    <link rel="shortcut icon" href="/logo_png.png" />
+    <link rel="apple-touch-icon" href="/logo_png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <title>Tic Tac Toe by pppwtk</title>
+    <title>tictactoe-qlearning</title>
   </head>
   <body>
     <div id="root"></div>
